# nutrition

./: .dockerignore  BUILD.bazel  BW.xlsx  CMakeLists.txt  Dockerfile  README.md  index.html  render.yaml  run.py  server.py
.github/workflows/: deploy.yml
include/: macros.hpp  models.hpp  tdee.hpp  utils.hpp
scripts/: calorie_tracker.cpp
src/: macros.cpp  main.cpp  tdee.cpp  utils.cpp
webapp/: app.py
webapp/static/: style.css
webapp/templates/: index.html  result.html
